--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,11 @@
   "description": "Brown CSCI0320 Sprint 3 Gearup for Fall 2023",
   "license": "UNLICENSED",
   "dependencies": {
-    "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "playwright": "^1.39.0",
+    "playwright": "^1.40.1",
     "react": "^18.2.0",
-    "react-dom": "^18.1.0",
-    "typescript": "^4.6.4"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
@@ -19,9 +17,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^20.10.5",
     "@vitejs/plugin-react": "^4.1.0",
     "eslint": "^8.15.0",
     "happy-dom": "^12.10.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
     "web-vitals": "^2.1.4"
